feat: add view transition name class of main title

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -12,3 +12,8 @@
   view-transition-name: demo-title;
   width: fit-content;
 }
+
+.main-title {
+  view-transition-name: main-title;
+  width: fit-content;
+}
